# fragment-service

./: README.md  pyproject.toml
src/fragment_service/: __init__.py  main.py
src/fragment_service/infrastructure/: config.py  di.py
