[project]
name = "fragment-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "imiderji", email = "skishou.developer@yandex.ru" }
]
requires-python = ">=3.14"
dependencies = [
    "dishka>=1.10.1",
]

[project.scripts]
fragment-service = "fragment_service:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
